@@ -12,6 +12,7 @@ cryptsetup (2:2.3.3-3+exp2) UNRELEASED; urgency=medium
       deriving it from the kernel command line.  BOOT_IMAGE's value is
       relative to the boot's loader viewpoint, which might differ from that of
       the main system.
+  * d/rules: Build our scripts with `-Wall -Werror`.
 
  -- Guilhem Moulin <guilhem@debian.org>  Wed, 26 Aug 2020 23:44:48 +0200
 
